Time: 17 ms (87.88%) | Memory: 98 MB (62.77%) - LeetSync